# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: general.yml
migrations/: 20250109002513_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
